[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "asyncio-keyed-lock"
version = "1.0.0"
description = "Per-key asyncio locking with automatic cleanup and graceful-shutdown support. Zero dependencies."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Ori Cohen" },
]
keywords = ["asyncio", "lock", "keyed-lock", "concurrency", "async", "mutex", "synchronization", "graceful-shutdown"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]

[project.urls]
Repository = "https://github.com/ori88c-python-packages/asyncio-keyed-lock"
Issues = "https://github.com/ori88c-python-packages/asyncio-keyed-lock/issues"
Changelog = "https://github.com/ori88c-python-packages/asyncio-keyed-lock/releases"

[dependency-groups]
dev = [
    "mypy>=1.20.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.9",
]

[tool.hatch.build.targets.wheel]
packages = ["src/asyncio_keyed_lock"]

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = ["I", "E", "F", "UP", "B", "SIM", "RUF"]

[tool.mypy]
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
